<resources>
    <string name="app_name">PhotoReceipt</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_camera">Camera</string>
    <string name="title_community">Community</string>

    <string name="base_url">http://3.21.35.164:8080/</string>

    <!--  Login Activity  -->
    <string name="login_id">아이디</string>
    <string name="login_pw">비밀번호</string>
    <string name="login_btn">로그인</string>
    <string name="login_join">회원가입</string>
    <string name="join_nickname">닉네임</string>
    <string name="join_pw_check">비밀번호 확인</string>

    <!--  Community Fragment  -->
    <string name="community_write">글쓰기</string>

    <!--  Upload Activity  -->
    <string name="upload_upload">업로드</string>
    <string name="upload_text">내용</string>

    <!--  Board Activity  -->
    <string name="board_owner">글쓴이</string>
    <string name="board_filter">필터 정보</string>
    <string name="board_filter_save">필터 저장</string>

    <!--  Error Message  -->
    <string name="err_invalid_account">아이디 또는 비밀번호 오류</string>
    <string name="err_duplicate_account">아이디 중복</string>
</resources>